<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AnotherActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="333dp"
            android:layout_marginRight="333dp"
            android:layout_marginBottom="510dp"
            android:text="@string/cuenta_num_cedula"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputCedula"
            android:layout_width="219dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="26dp"
                android:hint="@string/cuenta_num_cedula_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/cuenta_nombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputCedula" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="209dp"
            android:layout_marginRight="209dp"
            android:text="@string/cuenta_apellidos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputCedula" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="333dp"
            android:layout_marginRight="333dp"
            android:text="@string/cuenta_direccion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout12" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/cuenta_nacimiento"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/cuenta_num_celular"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/cuenta_usuario"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout8" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="13dp"
            android:text="@string/cuenta_contraseña"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout12"
            android:layout_width="113dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="239dp"
            android:layout_height="55dp"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="140dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="119dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout10"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            android:layout_width="219dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout7"
            android:layout_width="219dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cuenta_contraseña_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout8"
            android:layout_width="39dp"
            android:layout_height="55dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cuenta_dd" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout9"
            android:layout_width="39dp"
            android:layout_height="55dp"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout10"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout8"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cuenta_mm" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout10"
            android:layout_width="53dp"
            android:layout_height="55dp"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout9"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cuenta_yyyy" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout11"
            android:layout_width="119dp"
            android:layout_height="55dp"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="119dp"
            android:layout_height="55dp"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout11"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_cuenta_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="77dp"
            android:text="@string/cuenta_guardar"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout6"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

        <Button
            android:id="@+id/button_cuenta_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginLeft="33dp"
            android:onClick="cancel_Change_Register"
            android:text="@string/cuenta_cancelar"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout7"
            app:layout_constraintTop_toBottomOf="@+id/button_cuenta_guardar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>